# egaku-term

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: app.rs  app_async.rs  draw.rs  error.rs  event.rs  keymap.rs  lib.rs  terminal.rs  theme.rs
