[package]
name = "egaku-term"
version = "0.2.1"
edition = "2024"
rust-version = "1.89.0"
description = "Egaku-Term — terminal renderer + runtime for egaku widget state machines (crossterm-backed, sync + tokio)"
homepage = "https://github.com/pleme-io/egaku-term"
repository = "https://github.com/pleme-io/egaku-term"
documentation = "https://docs.rs/egaku-term"
readme = "README.md"
license = "MIT"
categories = ["command-line-interface", "gui"]
keywords = ["tui", "terminal", "widgets", "egaku", "crossterm"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[features]
default = []
# Pull in tokio + crossterm event-stream for `app::run_async`.
tokio = ["dep:tokio", "dep:futures-util", "crossterm/event-stream"]

[dependencies]
egaku = { git = "https://github.com/pleme-io/egaku" }
crossterm = "0.28"
thiserror = "2"
unicode-width = "0.2"
tokio = { version = "1", features = ["macros", "rt"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
